Install express-session, Make login route& function in app.js

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,8 +9,8 @@
         </div>
         <div class="container">
             <div class="padding"></div>
-            <form action="/main" method="post">
-                <p>ID : <input type="text" name="id" > <button type="submit">로그인</button></p>
+            <form action="/login" method="get">
+                <p>ID : <input type="text" name="username" > <button type="submit">로그인</button></p>
             </form>
         </div>
     </body>
