--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,11 +15,11 @@
                     <span>
                         <h4>프로젝트 리스트</h4>
                     </span>
-                    <% if(projectlist.length == 0) { %>
+                    <% if(projectList.length == 0) { %>
                     <div style="border-bottom: 0px; border-right: 0px; border-left: 0px;"><h4>프로젝트가 없습니다.</h4></div>
                     <% } else { %>
-                        <% for (var i in projectlist) { %>
-                        <div class="element" onclick="location.href='/projects/:<%= projectlist[i] %>'"> 프로젝트 : <%= projectlist[i]  %></div>
+                        <% for (var i in projectList) { %>
+                        <div class="element" onclick="location.href='/projects/:<%= projectList[i].pid %>'"> 프로젝트 : <%= projectList[i].name  %></div>
                             <div class="inner-padding"></div>
                         <% } %>
                     <% } %>
@@ -28,7 +28,18 @@
                     <div class="right-inner">
                         <span>
                             <h4>나의 업무</h4>
-                        </span>    
+                        </span> 
+                        <% if(substepList.length == 0) { %>
+                            <div style="border-bottom: 0px; border-right: 0px; border-left: 0px;"><h4>해야할 일이  없습니다.</h4></div>
+                        <% } else { %>
+                            <% for (var i in substepList) { %>
+                                <div class="element" onclick="location.href='/projects/:<%= substepList[i].pid %>/:<%= substepList[i].sid %>'">
+                                    <h4><%= projectList.find(function(value){return value.pid == substepList[i].pid}).name %></h4>
+                                    <p><%= substepList[i].name  %></p></div>
+                                <div class="inner-padding"></div>
+                            <% } %>
+                        <% } %>
+   
                     </div>
                     <div class="right-padding"></div>
                     <div class="right-inner">
