--- a/views/main.ejs
+++ b/views/main.ejs
@@ -36,40 +36,43 @@
             <div class="padding"></div>
             <span>
                 <div class="left">
-                    <span>
+                    <div class="titlebox">
                         <h4>프로젝트 리스트</h4>
-                    </span>
-                    <% if(projectList.length == 0) { %>
-                    <div style="border-bottom: 0px; border-right: 0px; border-left: 0px;"><h4>프로젝트가 없습니다.</h4></div>
-                    <% } else { %>
-                        <% for (var i in projectList) { %>
-                        <div class="element" onclick="location.href='/projects/:<%= projectList[i].pid %>'"> 프로젝트 : <%= projectList[i].name  %></div>
-                            <div class="inner-padding"></div>
+                    </div>
+                    <div class="elementbox">
+                        <% if(projectList.length == 0) { %>
+                        <div style="border-bottom: 0px; border-right: 0px; border-left: 0px;"><h4>프로젝트가 없습니다.</h4></div>
+                        <% } else { %>
+                            <% for (var i in projectList) { %>
+                                <div class="element" onclick="location.href='/projects/:<%= projectList[i].pid %>'"> 프로젝트 : <%= projectList[i].name  %></div>
+                            <% } %>
                         <% } %>
-                    <% } %>
+                        <div class="inner-padding"></div>
+                    </div>
                 </div>
                 <div class="right">
                     <div class="right-inner">
-                        <span>
+                        <div class="titlebox">
                             <h4>나의 업무</h4>
-                        </span> 
-                        <% if(substepList.length == 0) { %>
-                            <div style="border-bottom: 0px; border-right: 0px; border-left: 0px;"><h4>해야할 일이  없습니다.</h4></div>
-                        <% } else { %>
-                            <% for (var i in substepList) { %>
-                                <div class="element" onclick="location.href='/projects/:<%= substepList[i].pid %>/:<%= substepList[i].sid %>'">
-                                    <h4><%= projectList.find(function(value){return value.pid == substepList[i].pid}).name %></h4>
-                                    <p><%= substepList[i].name  %></p></div>
-                                <div class="inner-padding"></div>
+                        </div> 
+                        <div class="elementbox">
+                            <% if(substepList.length == 0) { %>
+                                <div style="border-bottom: 0px; border-right: 0px; border-left: 0px;"><h4>해야할 일이  없습니다.</h4></div>
+                            <% } else { %>
+                                <% for (var i in substepList) { %>
+                                    <div class="element" onclick="location.href='/projects/:<%= substepList[i].pid %>/:<%= substepList[i].sid %>'">
+                                        <h4><%= projectList.find(function(value){return value.pid == substepList[i].pid}).name %></h4>
+                                        <p><%= substepList[i].name  %></p></div>
+                                <% } %>
                             <% } %>
-                        <% } %>
-   
+                            <div class="inner-padding"></div>
+                        </div>
                     </div>
                     <div class="right-padding"></div>
                     <div class="right-inner">
-                        <span>
+                        <div class="titlebox">
                             <h4>초대 리스트</h4>
-                        </span>    
+                        </div>    
                     </div>
                 </div>
             </span>
