Edit layout of main page(main.ejs)

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -53,7 +53,7 @@
                 <div class="right">
                     <div class="right-inner">
                         <div class="titlebox">
-                            <h4>나의 업무</h4>
+                        <h4>나의 업무</h4>
                         </div> 
                         <div class="elementbox">
                             <% if(substepList.length == 0) { %>
@@ -61,7 +61,7 @@
                             <% } else { %>
                                 <% for (var i in substepList) { %>
                                     <div class="element" onclick="location.href='/projects/:<%= substepList[i].pid %>/:<%= substepList[i].sid %>'">
-                                        <h4><%= projectList.find(function(value){return value.pid == substepList[i].pid}).name %></h4>
+                                        <%= projectList.find(function(value){return value.pid == substepList[i].pid}).name %>
                                         <p><%= substepList[i].name  %></p></div>
                                 <% } %>
                             <% } %>
