--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@ h1 {
 }
 
 h4, p {
+    margin-top-bottom: 3px;
     text-align: center;
 }
 
@@ -88,6 +89,7 @@ form {
 
 .titlebox {
     height: 15%;
+    max-height: 60px;
     border: 0px;
     border-bottom: 5px solid black;
 }
