--- a/views/project.ejs
+++ b/views/project.ejs
@@ -34,6 +34,7 @@
                 sid = data.sid;
             });
             
+            
             function inviteUserToggle(){
                 var x = document.getElementById('inviteUser');
                 if (x.style.display === 'none') {
@@ -45,6 +46,24 @@
             
             function makeSubstepToggle(){
                 var x = document.getElementById('makeSubstep');
+                if (x.style.display === 'none') {
+                    x.style.display = '';
+                } else {
+                    x.style.display = 'none';
+                }
+            };
+
+            function addUserToSubstepToggle(){
+                var x = document.getElementById('addUserToSubstep');
+                if (x.style.display === 'none') {
+                    x.style.display = '';
+                } else {
+                    x.style.display = 'none';
+                }
+            };
+
+            function addDetailToggle(){
+                var x = document.getElementById('addDetail');
                 if (x.style.display === 'none') {
                     x.style.display = '';
                 } else {
@@ -151,10 +170,42 @@
             </div>
         </div>
         <div class="container" id="workShow">
-            <button onclick="changePage();">닫기</button>
-            <button>멤버 추가</button>
-            <button>세부사항 추가</button>
-            <button>코멘트 달기</button>
+            <div class="WorkCard">
+                <div class="WorkCard-header">
+                    <p style="text-align: right; margin-right: 15px;"><button onclick="changePage();">닫기</button></p>
+                    <h1>substep</h4>
+                </div>
+                <div class="WorkCard-container">
+                    <div class="WorkCard-left">
+                        <div class="WorkCard-left-top">    
+                            <h4>세부사항</h4>
+                            <ul>
+                                <li><input type="checkbox">12345</li>
+                                <li><input type="checkbox">678910</li>
+                            </ul>
+                        </div>
+                        <div class="WorkCard-left-bottom">
+                            <h4>코멘트</h4>
+                            <input type="text" style="margin-left:10%; width: 80%; height: 10%;">
+                            <button class="WorkCard-button" style="margin-left:75%;">코멘트 달기</button>
+                            <ul>
+                                <li>hello</li>
+                            </ul>    
+
+                        </div>
+                    </div>
+                    <div class="WorkCard-right">
+                        <div id="addUserToSubstep" style="display: none; border: 0px; border-bottom: 3px;">
+                            <p>추가 대상: <input type="text" id="addUserToSubstepName"><button onclick="addUserToSubstep();">초대</button></p>
+                        </div>
+                        <div id="addDetail" style="display: none; border: 0px; border-bottom: 3px;">
+                            <p>세부사항 이름: <input type="text" id="addDetailName"><button onclick="addDetail();">생성</button></p>
+                        </div>
+                        <p style="text-align: center;"><button class="WorkCard-button" onclick="addUserToSubstepToggle();">멤버 추가</button></p>
+                        <p style="text-align: center;"><button class="WorkCard-button" onclick="addDetailToggle();">세부사항 추가</button></p>
+                    </div>
+                </div>
+            </div>
         </div>
     <body>
 </body>
