--- a/views/project.ejs
+++ b/views/project.ejs
@@ -37,7 +37,19 @@
             });
             
             socket.on('load substep', function(data){
-                sid = data.sid;
+                var $substeptitle = $("#substeptitle");
+                var $details = $("#details");
+                var $comments = $("#comments");
+                $substeptitle.empty();
+                $details.empty();
+                $comments.empty();
+                $substeptitle.append(data.project_name);
+                for (var i in data.detailList){
+                    $details.append("<li><input type='checkbox'>"+detailList[i].name="</li>");
+                }
+                for (var i in data.commentList){
+                    $comments.append("<li>"+commentList[i].name="</li>");
+                }
             });
             
             function inviteUserToggle(){
@@ -186,23 +198,20 @@
             <div class="WorkCard">
                 <div class="WorkCard-header">
                     <p style="text-align: right; margin-right: 15px;"><button onclick="changeToProject();">닫기</button></p>
-                    <h1>substep</h4>
+                    <h1 id="substeptitle"></h4>
                 </div>
                 <div class="WorkCard-container">
                     <div class="WorkCard-left">
                         <div class="WorkCard-left-top">    
                             <h4>세부사항</h4>
-                            <ul>
-                                <li><input id="checkbox1" type="checkbox">12345</li>
-                                <li><input type="checkbox">678910</li>
+                            <ul id="details">
                             </ul>
                         </div>
                         <div class="WorkCard-left-bottom">
                             <h4>코멘트</h4>
                             <input type="text" id ="addCommentName"style="margin-left:10%; width: 80%; height: 10%;">
                             <button class="WorkCard-button" style="margin-left:75%;" onclick="addComment();">코멘트 달기</button>
-                            <ul>
-                                <li>hello</li>
+                            <ul id="comments">
                             </ul>    
 
                         </div>
